scripts/nullaway/original/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8.txt
../original/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Post.java:32: error: [NullAway] initializer method does not guarantee @NonNull fields title (line 18), text (line 19), created (line 20), tags (line 21), authorId (line 22) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Post() {
	       ^
    (see http://t.uber.com/nullaway )
../original/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Blog.java:9: error: [NullAway] @NonNull field id not initialized
	public ObjectId id;
	                ^
    (see http://t.uber.com/nullaway )
../original/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Author.java:26: error: [NullAway] initializer method does not guarantee @NonNull fields firstName (line 14), lastName (line 15), mailAdd (line 16), aboutMe (line 17) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Author() {
	       ^
    (see http://t.uber.com/nullaway )
../original/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/PostComments.java:31: error: [NullAway] initializer method does not guarantee @NonNull fields author (line 17), mailAdd (line 18), comment (line 19), created (line 20), postId (line 21) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public PostComments() {
	       ^
    (see http://t.uber.com/nullaway )
../original/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/factory/MongoDBFactory.java:14: error: [NullAway] @NonNull static field mongoDBFactory not initialized
	private static MongoDBFactory mongoDBFactory;
	                              ^
    (see http://t.uber.com/nullaway )
../original/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/factory/MongoDBFactory.java:30: error: [NullAway] assigning @Nullable expression to @NonNull field
				mongoDBFactory = null;
				               ^
    (see http://t.uber.com/nullaway )
../original/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/AuthorDAOImpl.java:41: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return author;
		^
    (see http://t.uber.com/nullaway )
../original/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostDAOImpl.java:46: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return post;
		^
    (see http://t.uber.com/nullaway )
Note: ../original/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Post.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
8 errors
